@@ -163,6 +163,18 @@ class EvalResourceTests extends PHPUnit_Framework_TestCase {
         $this->assertEquals('hello world', $this->smarty->fetch($tpl));
         $this->assertFalse($this->smarty->isCached($tpl));
     } 
+    
+    public function testUrlencodeTemplate()
+    {
+        $tpl = $this->smarty->createTemplate('eval:urlencode:%7B%22foobar%22%7Cescape%7D');
+        $this->assertEquals('foobar', $tpl->fetch());
+    }
+    
+    public function testBase64Template()
+    {
+        $tpl = $this->smarty->createTemplate('eval:base64:eyJmb29iYXIifGVzY2FwZX0=');
+        $this->assertEquals('foobar', $tpl->fetch());
+    }
 } 
 
 ?>
